Thu Jul  6 13:18:21 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* A few more OmQuery uses added to RunTest.java

	* NEAR and PHRASE queries now supported from Java.

Thu Jul  6 12:23:26 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The OmQuery constructors taking vector iterators now accept
	  FILTER, XOR, etc. as long as there are exactly two subqueries.
	
	* OmError exceptions are now also part of the debug logs.  (With
	  new tag OM_DEBUG_EXCEPTION)

	* includetest is now only compiled, not linked and run.

Thu Jul  6 10:55:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed a problem stopping OmLineBuf from compiling.

	* Removed Test.java, which shouldn't have been there in the first
	  place.

Wed Jul  5 18:44:11 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More work towards compiling on Solaris with non-gcc.

Wed Jul  5 17:38:20 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug when OmDatabaseGroups are assigned (mutex was deleted
	  before its sentry)

	* Fix potential bug in omdebug.h

Wed Jul  5 16:51:51 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed buglet in -Wno-long-long checking for the C compiler.

Wed Jul  5 15:17:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made some progress towards things compiling with Sun's CC.

Wed Jul  5 14:57:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* More debugging stuff: flush after each message, and correct a
	  couple of formatting wonkinesses.

Wed Jul  5 13:12:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implement OmDocumentTerm::get_description() and
	  OmDocumentContents::get_description()

Wed Jul  5 12:22:32 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More updates to the build system for java backends - the native
	  headers are now autogenerated
	
	* Added get_description() method to the OmQuery wrapper

	* Start of new Java test program
