@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = no-dependencies
 
 INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include
 
-noinst_HEADERS = io_system.h 3point6.h \
+noinst_HEADERS = musmutex.h io_system.h 3point6.h \
 		 da_document.h da_database.h \
 		 db_document.h db_database.h \
 		 daread.h dbread.h dbdefs.h
