@@ -29,6 +29,7 @@ extern "C" {
 #endif
 
 #include "3point6.h"
+#include "musmutex.h"
 #include "io_system.h"
 #include "dbdefs.h"
 
@@ -48,7 +49,8 @@ struct DB_cursor /* pointer into a block */
 };
 
 struct DB_file
-{   filehandle locator;
+{
+    filehandle locator;
 
     int block_size;
 
@@ -73,6 +75,7 @@ struct DB_file
     int term_count;
 
     int heavy_duty;     /* 1 or 0 according as heavy duty or flimsy */
+    MUS_PTHREAD_MUTEX(mutex);
 };
 
 struct DB_term_info
